RESOLVED FIXED130374
Renable pagination mode in WK2 MiniBrowser
https://bugs.webkit.org/show_bug.cgi?id=130374
Summary Renable pagination mode in WK2 MiniBrowser
Simon Fraser (smfr)
Reported 2014-03-17 17:46:46 PDT
Renable pagination mode in WK2 MiniBrowser
Attachments
Patch (8.35 KB, patch)
2014-03-17 17:47 PDT, Simon Fraser (smfr)
andersca: review+
Simon Fraser (smfr)
Comment 1 2014-03-17 17:47:38 PDT
WebKit Commit Bot
Comment 2 2014-03-17 17:48:56 PDT
Attachment 226988 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKWebViewPrivate.h:97: Missing spaces around = [whitespace/operators] [4] ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKWebViewPrivate.h:100: Missing spaces around = [whitespace/operators] [4] ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKWebViewPrivate.h:102: Missing spaces around = [whitespace/operators] [4] ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKWebViewPrivate.h:103: Missing spaces around = [whitespace/operators] [4] Total errors found: 4 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3 2014-03-17 20:09:30 PDT
Comment on attachment 226988 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=226988&action=review > Source/WebKit2/UIProcess/API/Cocoa/WKWebViewPrivate.h:40 > + WKPaginationModeUnpaginated, > + WKPaginationModeLeftToRight, > + WKPaginationModeRightToLeft, > + WKPaginationModeTopToBottom, > + WKPaginationModeBottomToTop, These should also be prefixed.
Simon Fraser (smfr)
Comment 4 2014-03-18 10:58:03 PDT
Note You need to log in before you can comment on or make changes to this bug.